--- a/index61.html
+++ b/index61.html
@@ -1,1 +1,33 @@
-  
+  <!DOCTYPE html>
+  <html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+  </head>
+  <body>
+    <script>
+        try{
+            // harry
+
+            // throw new ReferenceError=("ram is not good")
+            //    console.log(ram)
+            //    throw new ReferenceError("harry is not good")
+
+            
+        let age = prompt("Enter your age")
+        age = Number.parseInt(age) 
+        if(age>150){
+        throw new ReferenceError("This is probably not true")
+        }
+} catch (error) {
+        console.log(error.name)
+        console.log(error.message)
+        console.log(error.stack)
+}
+
+  console.log("The script is still running")
+    </script>
+
+  </body>
+  </html>
