loop over the array

--- a/jsbrowser23/index101.html
+++ b/jsbrowser23/index101.html
@@ -11,7 +11,10 @@
 
         function squared(number)
         {
-            console.log(number*number)
+            // console.log(number*number)
+
+
+            return number*number
         }
 
         squared(5);
