this code for 'for in & for of loop '

--- a/jsbrowser23/index102.html
+++ b/jsbrowser23/index102.html
@@ -16,19 +16,23 @@
             'Sita',
         ];
 
-        for(let i=0; i<Students.length; i++)
-        {
-            console.log(`roll no ${i+1}: ${Students[i]}`);
-        }
-
-        
+        // for(let i=0; i<Students.length; i++)
+        // {
+        //     console.log(`roll no ${i+1}: ${Students[i]}`);
+        // }
 
 
+// for ... in loop
+// for(let i in Students)
+// {
+//     console.log(`Roll No ${i+1}: ${Students[i]}`);
+// }
 
-
-
-
-
+// for of loop
+for(let student of Students)
+{
+    console.log(student);
+}
 
 
 
@@ -36,3 +40,12 @@
     </script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
