spread operator is also do concatenate

--- a/jsbrowser23/index104.html
+++ b/jsbrowser23/index104.html
@@ -43,7 +43,10 @@ MayBatch.push('newStudent');
 console.log(MayBatch);
 console.log(newBatch);
 
+// spread operator also do concatenate 
+const mergedBatch=[...MayBatch, ...junBatch];
 
+console.log(mergedBatch);
 
 
     </script>
