--- a/jsbrowser23/index111.html
+++ b/jsbrowser23/index111.html
@@ -21,6 +21,11 @@ const sum2=function(a,b){
 };
 console.log(sum2(1,8));
 
+// arrow function 
+var prod=(num1 * num2) => num1* num2;
+console.log(prod(2,4))
+
+
     </script>
 </body>
 </html>
