this code for setter

--- a/jsbrowser23/index118.html
+++ b/jsbrowser23/index118.html
@@ -39,6 +39,19 @@
     //     getDiameter(){
     //         console.log(this.radius * 2);
     //     }
+       set diameter(newDiameter)
+       {
+
+        if(newDiameter >=0){
+            this.radius = newDiameter/2 ;
+        }
+
+        else{
+            console.log("invalid input")
+        }
+        
+
+       }
     }
 
     const circle = new Circle(4);
@@ -50,7 +63,11 @@
 
     circle.radius = 6;
     console.log(circle.diameter);
-    
+
+    circle.diameter = 20 ;
+    console.log(circle.radius);
+    console.log(circle.diameter);
+    circle.diameter = -2 ;
 
 
    
