--- a/jsbrowser23/index120.html
+++ b/jsbrowser23/index120.html
@@ -11,7 +11,7 @@
 
     <!-- <h3 id="text"></h3> -->
 
-    <h2>Set time interval</h2>
+    <!-- <h2>Set time interval</h2> -->
 
 
 
@@ -20,7 +20,7 @@
 
     <script>
         // const buttonElement = document.querySelector('button');
-        const textElement = document.querySelector('#text');
+        // const textElement = document.querySelector('#text');
          
         // buttonElement.addEventListener('click' , () =>{
         //     textElement.textContent = 'Button is pressed';
@@ -30,23 +30,36 @@
         //     textElement.textContent = '';
         // },1000);
 
-        let seconds=0;
-        textElement.textContent = `${seconds}`;
+    //     let seconds=0;
+    //     textElement.textContent = `${seconds}`;
 
-      const timer =  setInterval(()=>{
-    seconds++ ;
-    textElement.textContent = `${seconds}`;
+    //   const timer =  setInterval(()=>{
+    // seconds++ ;
+    // textElement.textContent = `${seconds}`;
 
-    if(seconds >=5){
-        clearInterval(timer);
-    }
-        },1000);
+    // if(seconds >=5){
+    //     clearInterval(timer);
+    // }
+    //     },1000);
 
-        // });
+    //     // });
 
 // set intervall
 
 
+function greet(callback){
+    setTimeout(()=>{
+        console.log('hello');
+        callback();
+
+    },1000);
+}
+
+function message(){
+    console.log('welcome to the session');
+}
+
+greet(message);
 
 
 
